# ledger

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/jot-cli/: Cargo.toml
crates/jot-cli/src/: cache.rs  cli.rs  config.rs  constants.rs  errors.rs  main.rs  security.rs
crates/jot-cli/src/app/: context.rs  mod.rs  passphrase.rs  resolver.rs  security_config.rs
crates/jot-cli/src/commands/: init.rs  misc.rs  mod.rs
crates/jot-cli/src/commands/associations/: attach.rs  detach.rs  mod.rs
crates/jot-cli/src/commands/compositions/: create.rs  delete.rs  list.rs  mod.rs  rename.rs  show.rs
crates/jot-cli/src/commands/entries/: add.rs  edit.rs  export.rs  list.rs  search.rs  show.rs
crates/jot-cli/src/commands/maintenance/: backup.rs  check.rs  doctor.rs
crates/jot-cli/src/commands/templates/: clear_default.rs  create.rs  delete.rs  list.rs  mod.rs  set_default.rs  show.rs  update.rs
crates/jot-cli/src/helpers/: input.rs  parsing.rs
crates/jot-cli/src/output/: mod.rs
crates/jot-cli/src/ui/: format.rs  mod.rs  progress.rs  prompt.rs  render.rs
crates/jot-cli/tests/: cli_flow.rs
crates/jot-core/: Cargo.toml
crates/jot-core/src/: error.rs  lib.rs
crates/jot-core/src/crypto/: key.rs  mod.rs  passphrase.rs
crates/jot-core/src/storage/: encryption.rs  mod.rs  traits.rs  types.rs
crates/jot-core/src/storage/age_sqlite/: mod.rs  row.rs  validation.rs
crates/jot-core/tests/: age_sqlite_storage.rs  encrypted_file_round_trip.rs
crates/ledger-cli/: Cargo.toml
crates/ledger-cli/src/: app.rs  cache.rs  cli.rs  config.rs  helpers.rs  main.rs  output.rs  security.rs
crates/ledger-cli/src/app/: context.rs  mod.rs  passphrase.rs  resolver.rs
crates/ledger-cli/src/commands/: entries.rs  init.rs  maintenance.rs  misc.rs  mod.rs  todo.rs
crates/ledger-cli/src/commands/associations/: attach.rs  detach.rs
crates/ledger-cli/src/commands/compositions/: create.rs  delete.rs  list.rs  rename.rs  show.rs
crates/ledger-cli/src/commands/entries/: add.rs  edit.rs  export.rs  list.rs  mod.rs  search.rs  show.rs
crates/ledger-cli/src/commands/maintenance/: backup.rs  cache_daemon.rs  check.rs  doctor.rs  lock.rs  mod.rs
crates/ledger-cli/src/commands/templates/: clear_default.rs  create.rs  delete.rs  list.rs  set_default.rs  show.rs  update.rs
crates/ledger-cli/src/helpers/: fields.rs  input.rs  mod.rs  parsing.rs
crates/ledger-cli/src/output/: json.rs  mod.rs  text.rs
crates/ledger-cli/src/ui/: context.rs  format.rs  mod.rs  mode.rs  progress.rs  prompt.rs  render.rs  theme.rs
crates/ledger-cli/tests/: cli_flow.rs
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: error.rs  fs.rs  lib.rs
crates/ledger-core/src/crypto/: key.rs  mod.rs  passphrase.rs
crates/ledger-core/src/storage/: age_sqlite.rs  encryption.rs  mod.rs  traits.rs  types.rs
crates/ledger-core/src/storage/age_sqlite/: mod.rs  row.rs  validation.rs
crates/ledger-core/tests/: age_sqlite_storage.rs  encrypted_file_round_trip.rs
docs/: DEVELOPMENT.md  planning.md
docs/RFC/: RFC-001.md  RFC-002.md  RFC-003.md  RFC-004.md  RFC-005.md  RFC-006.md
docs/design/: cli-add-form-builder.md  cli-ui-architecture.md  cli-ui-polish.md  cli-ux-spec.md  config-spec.md  format-spec.md  init-wizard.md  session-cache.md  templates.md
docs/milestones/: M1-PLAN.md  M2-PLAN.md  M3-PLAN.md  M4-PLAN.md  M5-PLAN.md  M6-PLAN.md  README.md  phase-0.1.md
docs/milestones/archive/: M1-PLAN.md  M2-PLAN.md
~/: ledger.ledger
