[workspace]
members = [
    "crates/jot-core",
    "crates/jot-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jake"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hotsaucejake/jot"

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async (for future use)
tokio = { version = "1.42", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography (for M1+)
age = "0.11"
argon2 = "0.5"

# Database (for M1+)
rusqlite = { version = "0.32", features = ["bundled", "serialize"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
