[package]
name = "ledger-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
# Internal dependencies
ledger-core = { path = "../ledger-core" }

# CLI dependencies from workspace
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dialoguer = "0.11"
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
dialoguer = "0.11"
