[package]
name = "ledger-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
# Internal dependencies
ledger-core = { path = "../ledger-core" }

# CLI dependencies from workspace
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.8"
dialoguer = { version = "0.11", features = ["completion", "fuzzy-select"] }
clap_complete = "4.5"
serde_json = { workspace = true }
serde = { workspace = true }
toml = "0.8"
uuid = { workspace = true }
base64 = "0.22"
blake3 = "1.5"
zeroize = "1.7"
libc = "0.2"
keyring = "2.3"
getrandom = "0.2"
once_cell = "1.19"

# UI dependencies
comfy-table = "7.1"
indicatif = "0.17"
owo-colors = "4.1"

[dev-dependencies]
rusqlite = { workspace = true }
dialoguer = { version = "0.11", features = ["completion", "fuzzy-select"] }

[features]
test-support = []
