[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies from workspace
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Database (for M1+, not used in M0)
# rusqlite = { workspace = true }

# Cryptography (for M1+, not used in M0)
# age = { workspace = true }
# argon2 = { workspace = true }
