[package]
name = "ledger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies from workspace
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Database (M1+)
rusqlite = { workspace = true }

# Cryptography (M1+)
age = { workspace = true }
argon2 = { workspace = true }
zeroize = "1.7"
secrecy = "0.10"

[dev-dependencies]
hex = "0.4"
